Late fiixes and changes
- Made the `Physics Staff` placeable adjacent to backtanks.
- Fixed the `Set Data` node when targetting `Servo Bearings` with `Thrusters` attached.
- Fixed an issue that caused `Dedicated Servers` to not allow block breaking by adding the missing `"required": false" keys to the `pickaxe.json` and `needs_iron_tool.json`
- Updated the support head description to remove usage ambiguity.